@@ -1,5 +1,5 @@
 /*
- * Copyright 2014 SAP AG.  All Rights Reserved.
+ * Copyright (c) 2014 SAP SE. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,20 @@
  * @test
  * @bug 8038048
  * @summary assert(null_obj->escape_state() == PointsToNode::NoEscape,etc)
- * @modules java.base/sun.misc
- * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+DoEscapeAnalysis -XX:-TieredCompilation -Xbatch TestUnsafePutAddressNullObjMustNotEscape
+ * @modules java.base/jdk.internal.misc:+open
+ *
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:+DoEscapeAnalysis
+ *      -XX:-TieredCompilation -Xbatch
+ *      compiler.escapeAnalysis.TestUnsafePutAddressNullObjMustNotEscape
+ *
  * @author Richard Reingruber richard DOT reingruber AT sap DOT com
  */
 
+package compiler.escapeAnalysis;
+
+import jdk.internal.misc.Unsafe;
+
 import java.lang.reflect.Field;
-import sun.misc.Unsafe;
 
 public class TestUnsafePutAddressNullObjMustNotEscape {
 
@@ -43,7 +50,7 @@ public class TestUnsafePutAddressNullObjMustNotEscape {
         System.out.println("EXECUTING test.");
 
         {
-            System.out.println("Acquiring sun.misc.Unsafe.theUnsafe using reflection.");
+            System.out.println("Acquiring jdk.internal.misc.Unsafe.theUnsafe using reflection.");
             getUnsafe();
             System.out.println("Allocating raw memory.");
             mem = (usafe.allocateMemory(1024) + 8L) & ~7L;
@@ -78,8 +85,8 @@ public class TestUnsafePutAddressNullObjMustNotEscape {
     }
 
     private static void getUnsafe() throws Exception {
-        Field field = sun.misc.Unsafe.class.getDeclaredField("theUnsafe");
+        Field field = jdk.internal.misc.Unsafe.class.getDeclaredField("theUnsafe");
         field.setAccessible(true);
-        usafe = (sun.misc.Unsafe) field.get(null);
+        usafe = (jdk.internal.misc.Unsafe) field.get(null);
     }
 }
